@@ -66,6 +66,19 @@ AC_CHECK_LIB([pcre], [pcre_compile],, AC_MSG_ERROR(PCRE is required. Please see 
 #GLEW
 AC_CHECK_LIB(GLEW, glewInit, LIBS="$LIBS -lGLEW", AC_MSG_ERROR([GLEW required. Please see INSTALL]))
 
+#BOOST
+AX_BOOST_BASE([1.46], , AC_MSG_ERROR(Boost Filesystem >= 1.46 is required. Please see INSTALL))
+
+AX_BOOST_SYSTEM
+CXXFLAGS="$CXXFLAGS $BOOST_SYSTEM_CFLAGS"
+CPPFLAGS="$CPPFLAGS $BOOST_SYSTEM_CFLAGS"
+LIBS="$LIBS $BOOST_SYSTEM_LIB"
+
+AX_BOOST_FILESYSTEM
+CXXFLAGS="$CXXFLAGS $BOOST_FILESYSTEM_CFLAGS"
+CPPFLAGS="$CPPFLAGS $BOOST_FILESYSTEM_CFLAGS"
+LIBS="$LIBS $BOOST_FILESYSTEM_LIB"
+
 #Check for required headers
 AC_CHECK_HEADER([SDL.h],, AC_MSG_ERROR(SDL.h is required. Please see INSTALL))
 AC_CHECK_HEADER([SDL_image.h],, AC_MSG_ERROR(SDL_image.h is required. Please see INSTALL))
